--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practice test</title>
 </head>
+<style>
+    h2{
+        color: chartreuse;   }
+    p{
+        color: rgb(1, 19, 19);
+    }
+</style>
 <body>
     <h2>Practice</h2>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis aperiam itaque obcaecati distinctio harum, adipisci praesentium aspernatur voluptatem tenetur vero voluptate sunt magnam assumenda sed laudantium maiores, id a? Dolor.</p>
